Checks for empty sentences

--- a/CATPOC/viewer.html
+++ b/CATPOC/viewer.html
@@ -14,6 +14,7 @@
         <div>
             <select name="corpora-selector" id="corpora-selector">
                 <option value="scielo.en-es">SciELO en-es</option>
+                <option value="ted2020.de-ja">TED 2020 de-ja</option>
             </select>
             <button id="load-button">Load corpus stats</button>
         </div>
