--- a/CATPOC/viewer.html
+++ b/CATPOC/viewer.html
@@ -4,13 +4,19 @@
         <script src="https://code.jquery.com/jquery-latest.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/4.1.0/js-yaml.js"></script>
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-                
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>                
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        
         <title>Corpus Analytics Tool - Proof of Concept</title>
     </head>
     <body>
+    <div class="container">
         <h1>
             Corpus Analytics Tool - Proof of Concept
         </h1>        
+
         <div>
             <a href="./uploader.html">Go to uploader</a>
         </div>
@@ -41,6 +47,7 @@
         </div>
         <div>
             <a class="btn btn-info" id="download-yaml" href="#">Download yaml</a>
+        </div>
         </div>
         <script>
             $(document).ready(function(){
