--- a/CATPOC/uploader.html
+++ b/CATPOC/uploader.html
@@ -65,7 +65,7 @@
                             <label class="form-check-label" for="corpus-format">TSV</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="corpus-format" id="corpus-format" value="tmx" disabled>
+                            <input class="form-check-input" type="radio" name="corpus-format" id="corpus-format" value="tmx">
                             <label class="form-check-label" for="corpus-format">TMX</label>
                         </div>        
                     </div>
