--- a/CATPOC/uploader.html
+++ b/CATPOC/uploader.html
@@ -17,15 +17,14 @@
         </style>
         <meta name="viewport" content="width=device-width, initial-scale=1">
                 
-        <title>Data Analytics Tool - Proof of Concept</title>
+        <title>Data Analytics Tool - Uploader</title>
     </head>
     <body>
         <div class="container-lg">
-        <nav class="navbar navbar-light bg-light">
-            <a class="navbar-brand">
-                <img src="logo.png" height="50px"/> Data Analytics Tool
-            </a>
-                
+            <nav class="navbar navbar-light bg-light">
+                <a class="navbar-brand">
+                    <img src="logo.png" height="50px"/> Data Analytics Tool
+                </a>                
             </nav>
             <div class="row my-3">
                 <div class="col">                   
