first implementation of monolingual data

--- a/CATPOC/uploader.html
+++ b/CATPOC/uploader.html
@@ -77,7 +77,7 @@
                             <label class="form-label" for="lang-format">Language</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="lang-format" id="lang-format" value="mono" disabled>
+                            <input class="form-check-input" type="radio" name="lang-format" id="lang-format" value="mono">
                             <label class="form-check-label" for="lang-format">Mono</label>
                         </div>
                         <div class="form-check form-check-inline">
