--- a/CATPOC/uploader.html
+++ b/CATPOC/uploader.html
@@ -7,7 +7,9 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-
+        <script type="text/javascript">
+            document.write("<base href='" + window.location.origin + "' />");
+        </script>
 
         <style>
             .navbar-brand
@@ -33,7 +35,7 @@
             </div>
         
 
-            <form method="POST" action="http://localhost:8000/upload"  id="upload-form" enctype="multipart/form-data">
+            <form method="POST" action="/upload"  id="upload-form" enctype="multipart/form-data">
                 <div class="form-group">
                     <div class="row my-3">
                         <div class="col-1">
@@ -137,7 +139,7 @@
 
 
                 $.ajax({
-                    url: "http://localhost:8000/opus_langs", 
+                    url: "/opus_langs", 
                     success: function(data) {
                         var htmlOptions = [];
                         if (data.length){                          
