Added index page

--- a/CATPOC/viewer.html
+++ b/CATPOC/viewer.html
@@ -26,7 +26,7 @@
     <body>    
         <div class="container-lg">
             <nav class="navbar navbar-light bg-light">
-                <a class="navbar-brand">
+                <a class="navbar-brand" href="/">
                     <img src="logo.png" height="50px"/> Data Analytics Tool
                 </a>
             </nav>
