--- a/CATPOC/viewer.html
+++ b/CATPOC/viewer.html
@@ -7,6 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>                
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" rel="stylesheet">
         <script type="text/javascript">
             document.write("<base href='" + window.location.origin + "' />");
@@ -223,6 +224,9 @@
                 <a class="btn btn-primary" id="download-yaml" href="#">Download yaml</a>
             </div>
             <div class="col-auto">
+                <a class="btn btn-primary" id="download-pdf">Export as PDF</a>
+            </div>
+            <div class="col-auto">
                 <a class="btn btn-secondary" href="./uploader.html">Go to uploader</a>
             </div>
         </div>
@@ -261,6 +265,16 @@
             $('#load-button').click(function(){
                 load_data($("#corpora-selector").val());
                 document.getElementById('download-yaml').href="/download/"+$("#corpora-selector").val();
+            });
+            
+            $('#download-pdf').click(function(){
+                var content=document.getElementById("the-content")
+                var opt = { 
+                    margin: 10,
+                    filename: $("#corpus-name").html()+".pdf"
+                };
+                
+                href=html2pdf(content, opt);
             });
 
             google.charts.load('current', {'packages':['corechart', 'bar']});
