--- a/CATPOC/uploader.html
+++ b/CATPOC/uploader.html
@@ -123,7 +123,7 @@
                             <button class="btn btn-primary" type="submit" form="upload-form">Upload</button>
                         </div>
                         <div class="col-2">                
-                            <a  class="btn btn-secondary" href="./viewer.html">Go to viewer</a>
+                            <a  class="btn btn-dark" href="./viewer.html">Go to viewer</a>
                         </div>
                     </div>
                 </div>
