Higher level ngrams

--- a/CATPOC/viewer.html
+++ b/CATPOC/viewer.html
@@ -520,6 +520,9 @@
                 data.addRow(["ngrams", null, 0])
                 data.addRow(["1", "ngrams", 0])
                 data.addRow(["2", "ngrams", 0])
+                data.addRow(["3", "ngrams", 0])
+                data.addRow(["4", "ngrams", 0])
+                data.addRow(["5", "ngrams", 0])
                 for (const [key, value] of Object.entries(data_series)) {
                     ngram_length = parseInt(key)
                     value.forEach(function(item) {
