--- a/CATPOC/viewer.html
+++ b/CATPOC/viewer.html
@@ -1,4 +1,4 @@
-    <html>
+<html>
     <head>
         <meta charset="UTF-8">
         <!--JQuery-->
@@ -194,7 +194,7 @@
         
             <!-- BICLEANER SCORE HISTOGRAM -->
             <div class="row my-3">
-                <h3>Bicleaner score distribution</h3>
+                <h3>Bicleaner score distribution <i class="bi bi-info-circle" style="font-size: 0.7em;" title="Scores from 0 (lower quality sentences) to 1 (higher quality sentences)"></i></h3>
             </div>
             <div id="bicleaner_content">        
                 <div class="row">
