Small refactor on directories

--- a/viewer.html
+++ b/viewer.html
@@ -39,7 +39,7 @@
         <div class="container-lg">
             <nav class="navbar navbar-light bg-light">
                 <a class="navbar-brand" href="/">
-                    <img src="logo.png" height="50px"/> Data Analytics Tool
+                    <img src="img/logo.png" height="50px"/> Data Analytics Tool
                 </a>
             </nav>
             <div class="row my-3">
