--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="container-lg">
             <nav class="navbar navbar-light bg-light">
                 <a class="navbar-brand" href="/">
-                    <img src="logo.png" height="50px"/> Data Analytics Tool
+                    <img src="img/logo.png" height="50px"/> Data Analytics Tool
                 </a>                
             </nav>
 
