--- a/index.html
+++ b/index.html
@@ -1,81 +1,144 @@
-<html>		
-    <head>
-        <meta charset="UTF-8">
-        <!--JQuery-->
-        <script src="https://code.jquery.com/jquery-latest.js"></script>
-        <!--Bootstrap-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" rel="stylesheet">
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <!--JQuery-->
+    <script src="https://code.jquery.com/jquery-latest.js"></script>
+    <!--Bootstrap-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    <link href="/css/index.css" rel="stylesheet" />
+    <link href="/css/footer.css" rel="stylesheet" />
 
-        <script type="text/javascript">
-            document.write("<base href='" + window.location.origin + "' />");
-        </script>
+    <script type="text/javascript">
+      document.write("<base href='" + window.location.origin + "' />");
+    </script>
 
-        <style>
-            .navbar-brand
-            {
-              font-size: 40px;
-            }
-            .text-center
-            {
-               font-size: 80px;
-            }
-            .card-body
-            {
-                display: flex;
-                flex-direction: column;
-            }
-        </style>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-                
-        <title>Data Analytics Tool</title>
-    </head>
-    <body>
-        <div class="container-lg">
-            <nav class="navbar navbar-light bg-light">
-                <a class="navbar-brand" href="/">
-                    <img src="img/logo.png" height="50px"/> Data Analytics Tool
-                </a>                
-            </nav>
+    <style>
+      .navbar-brand {
+        font-size: 40px;
+      }
+      .text-center {
+        font-size: 80px;
+      }
+      .card-body {
+        display: flex;
+        flex-direction: column;
+      }
+    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-            <div class="row my-3">
-                <div class="col-3 inline">
-                    <div class="card h-100">                    
-                        <div class="card-img-top text-center  pt-5">
-                            <i class="bi bi-cloud-upload"></i>
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Upload</h5>
-                            <p class="card-text">Upload your corpus, get it analyzed. Reports are available at the Viewer as soon as they are ready.</p>
-                            <div class="d-grid gap-2 mt-auto">
-                                <a href="./uploader.html" class="btn btn-primary align-self-end">Upload</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>                
+    <title>Data Analytics Tool</title>
+  </head>
+  <body>
+    <div class="container-fluid main-container">
+      <nav class="navbar navbar-light">
+        <a class="navbar-brand" href="/">
+          <img src="img/logo.png" height="50px" /> Data Analytics Tool
+        </a>
+      </nav>
 
-                <div class="col-3 inline">
-                    <div class="card h-100">
-                        <div class="card-img-top text-center pt-5">
-                            <i class="bi bi-bar-chart-line"></i>
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">View</h5>
-                            <p class="card-text">Navigate, view and download your available reports.</p>
-                            <div class="d-grid gap-2 mt-auto">
-                                <a href="./viewer.html" class="btn btn-primary align-self-end">View</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+      <div class="cards-container">
+        <div class="card-wrapper">
+          <div class="card h-100">
+            <div class="card-img-top text-center pt-5">
+              <i class="bi bi-cloud-upload"></i>
             </div>
-            
-
+            <div class="card-body">
+              <h5 class="card-title">Upload</h5>
+              <p class="card-text">
+                Upload your corpus, get it analyzed. Reports are available at
+                the Viewer as soon as they are ready.
+              </p>
+              <div class="d-grid gap-2 mt-auto">
+                <a href="./uploader.html" class="btn btn-primary align-self-end"
+                  >Upload</a
+                >
+              </div>
+            </div>
+          </div>
         </div>
 
+        <div class="card-wrapper">
+          <div class="card h-100">
+            <div class="card-img-top text-center pt-5">
+              <i class="bi bi-bar-chart-line"></i>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">View</h5>
+              <p class="card-text">
+                Navigate, view and download your available reports.
+              </p>
+              <div class="d-grid gap-2 mt-auto">
+                <a href="./viewer.html" class="btn btn-primary align-self-end"
+                  >View</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="footer-text-left">
+        <p class="hplt-copyright">Ⓒ HPLT 2023</p>
+        <a
+          href="https://cordis.europa.eu/project/id/101070350"
+          class="horizon-link"
+          target="_blank"
+        >
+          <img
+            src="img/horizon.svg"
+            alt="european-union-flag"
+            class="horizon-logo"
+          />
+        </a>
 
-    </body>
+        <a href="https://www.ukri.org" class="ukri-link" target="_blank">
+          <img src="/img/UKRIlogo.png" alt="ukri-logo" class="ukri-logo" />
+        </a>
+
+        <p class="footer-info">
+          This project has received funding from the European Union’s Horizon
+          Europe research and innovation programme under grant agreement No
+          101070350 and from UK Research and Innovation (UKRI) under the UK
+          government’s Horizon Europe funding guarantee [grant number 10052546]
+        </p>
+      </div>
+      <div class="footer-text-middle">
+        <img src="/img/eu-flag.png" alt="" class="eu-flag" />
+        <p class="footer-info">
+          The contents of this publication are the sole responsibility of the
+          HPLT consortium and do not necessarily reflect the opinion of the
+          European Union.
+        </p>
+      </div>
+      <div class="footer-text-right">
+        <a href="https://twitter.com/hplt_eu" target="_blank" rel="noreferrer">
+          <img
+            src="/img/twitter.svg"
+            alt="twitter-icon"
+            class="twitter-icon-footer"
+          />
+        </a>
+      </div>
+    </div>
+  </body>
 </html>
-
