--- a/uploader.html
+++ b/uploader.html
@@ -29,12 +29,12 @@
     <body>
         <div class="container-fluid main-container">
             <nav class="navbar">
-                <a class="navbar-brand" href="http://localhost:3000/">
+                <a class="navbar-brand" href="/">
                     <img src="img/HPLTAnalytics-light.svg" height="50px" width="240px"/> 
                 </a>    
                 <div class="nav-links">
                 <a href="#" class="single-nav-link">Uploader</a>
-                <a href="http://localhost:3000/viewer/name" class="single-nav-link">Viewer</a>   
+                <a href="/viewer/name" class="single-nav-link">Viewer</a>   
             </div>         
             </nav>
             <div class="row my-3">
@@ -112,7 +112,7 @@
                     <div class="uploader-buttons">                                   
                             <button class="button-26" type="submit" form="upload-form">Upload</button>
                             <button id="getcmd-button" class="button-27" type="button" form="upload-form">Get cmd</button>
-                            <a  class="button-28" href="http://localhost:3000/viewer/name">Go to viewer</a>
+                            <a  class="button-28" href="/viewer/name">Go to viewer</a>
                     </div>
                     
                 </div>
