Fixing frontend issues

--- a/uploader.html
+++ b/uploader.html
@@ -29,12 +29,12 @@
     <body>
         <div class="container-fluid main-container">
             <nav class="navbar">
-                <a class="navbar-brand" href="/">
+                <a class="navbar-brand" href="http://localhost:8000/">
                     <img src="img/HPLTAnalytics-light.svg" height="50px" width="240px"/> 
                 </a>    
                 <div class="nav-links">
-                <a href="#" class="single-nav-link">Uploader</a>
-                <a href="/viewer/name" class="single-nav-link">Viewer</a>   
+                <a href="/uploader.html" class="single-nav-link">Uploader</a>
+                <a href="http://localhost:8000/viewer/name" class="single-nav-link">Viewer</a>   
             </div>         
             </nav>
             <div class="row my-3">
